--- a/cfgs/templates/cfgs/index.html
+++ b/cfgs/templates/cfgs/index.html
@@ -53,8 +53,9 @@ input[type=submit]:hover {
 {% if form is not None %}
 {% load material_form %}
 <div style="background-color: #f2f2f2;">
+    <div style="color: black; font-size:18px; font-weight: bold; padding: 14px 20px;">{{request.path}}</div>
     <div class="container">
-        <form action="{{response.path}}"
+        <form action=""
               method="post"
               style="display:table-cell; vertical-align:middle;">
 
@@ -71,9 +72,9 @@ input[type=submit]:hover {
 {% load material_form %}
 <div style="background-color: #f2f2f2;">
     {% for frm in forms %}
-    {% with response.path|add:'/'|add:forloop.counter0 as action %}
+    <div style="color: black; font-size:18px; font-weight: bold; padding: 14px 20px;">{{request.path}}/{{forloop.counter0}}</div>
     <div class="container">
-        <form action="{{action}}"
+        <form action="{{request.path}}/{{forloop.counter0}}"
               method="post"
               style="display:table-cell; vertical-align:middle;">
 
@@ -83,7 +84,6 @@ input[type=submit]:hover {
             <input type="submit" value="Save">
         </form>
     </div>
-    {% endwith %}
     {% endfor %}
 </div>
 {% endif%}
