--- a/cfgs/templates/cfgs/index.html
+++ b/cfgs/templates/cfgs/index.html
@@ -37,50 +37,56 @@ input[type=submit]:hover {
 }
 </style>
 
+<header>
+    <form action="/cfgs/"
+          method="post">{% csrf_token %}
+        {{ cfgs }}
+    </form>
+</header>
 
+{% if cfg is not None %}
+    <nav style="position: fixed!important; width:200px; height: 100%; padding-left:10px;">
+        {% for i,j in keys %}
+        <a style="font-size:16px; font-weight: bold; display:block;" href="/cfgs/{{cfg}}/{{i}}">{{ j }}</a>
+        {% endfor %}
+    </nav>
 
-<nav style="position: fixed!important; width:200px; height: 100%; padding-left:10px;">
-    {% for i,j in keys %}
-    <a style="font-size:16px; font-weight: bold; display:block;" href="/cfgs/{{i}}">{{ j }}</a>
-    {% endfor %}
-</nav>
+    {% if form is not None %}
+    {% load material_form %}
+    <div style="margin-left:210px;">
+        <div style="color: black; font-size:18px; font-weight: bold; padding: 14px 20px;">{{request.path}}</div>
+        <div class="container">
+            <form action=""
+                  method="post">
 
-{% if form is not None %}
-{% load material_form %}
-<div style="margin-left:210px;">
-    <div style="color: black; font-size:18px; font-weight: bold; padding: 14px 20px;">{{request.path}}</div>
-    <div class="container">
-        <form action=""
-              method="post"
-              style="">
-
-            {% csrf_token %}
-            <!--{{ frm }}-->
-            {% form form=form %}{% endform %}
-            <input type="submit" value="Save">
-        </form>
+                {% csrf_token %}
+                <!--{{ frm }}-->
+                {% form form=form %}{% endform %}
+                <input type="submit" value="Save">
+            </form>
+        </div>
     </div>
-</div>
-{% endif%}
+    {% endif%}
 
-{% if forms is not None %}
-{% load material_form %}
-<div style="margin-left:210px;">
-    {% for frm in forms %}
-    <div style="color: black; font-size:18px; font-weight: bold; padding: 14px 20px;">{{request.path}}/{{forloop.counter0}}</div>
-    <div class="container">
-        <form action="{{request.path}}/{{forloop.counter0}}"
-              method="post"
-              style="">
+    {% if forms is not None %}
+    {% load material_form %}
+    <div style="margin-left:210px;">
+        {% for frm in forms %}
+        <div style="color: black; font-size:18px; font-weight: bold; padding: 14px 20px;">{{request.path}}/{{forloop.counter0}}</div>
+        <div class="container">
+            <form action="{{request.path}}/{{forloop.counter0}}"
+                  method="post"
+                  style="">
 
-            {% csrf_token %}
-            <!--{{ frm }}-->
-            {% form form=frm %}{% endform %}
-            <input type="submit" value="Save">
-        </form>
+                {% csrf_token %}
+                <!--{{ frm }}-->
+                {% form form=frm %}{% endform %}
+                <input type="submit" value="Save">
+            </form>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
+    {% endif %}
 {% endif %}
 
 {% endblock %}
