--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,42 @@
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<html>
+    {% include 'material/includes/material_css.html' %}
+    {% include 'material/includes/material_js.html' %}
+
+    <style>
+    .card {
+        /* Add shadows to create the "card" effect */
+        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+        transition: 0.3s;
+        padding: 2px 16px;
+    }
+
+    /* Add some padding inside the card container */
+    .container {
+        padding: 20px 16px;
+    }
+    </style>
+
+    <body style="background-color: #f2f2f2;">
+
+        {% load material_form %}
+        <div class="container">
+            <div class="card">
+                <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
+                    {% if 'username' in form.fields %}
+                    {% form %}
+                    {% part form.username prefix %}<i class="material-icons prefix">account_box</i>{% endpart %}
+                    {% part form.password prefix %}<i class="material-icons prefix">lock</i>{% endpart %}
+                    {% endform %}
+                    {% else %}
+                    {% form %}{% endform %}
+                    {% endif %}
+
+                    <div class="action right-align">
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </body>
+<html>
+
