quick switch beween configs

--- a/cfgs/templates/cfgs/index.html
+++ b/cfgs/templates/cfgs/index.html
@@ -46,7 +46,7 @@ input[type=submit]:hover {
 <div class="container">
 
     <header>
-        <form action="/cfgs/"
+        <form action=""
               method="post">{% csrf_token %}
             {{ cfgs }}
         </form>
