--- a/templates/base_web.html
+++ b/templates/base_web.html
@@ -1,7 +1,6 @@
 <html>
-    {% include 'material/includes/material_css.html' %}
-    {% include 'material/includes/material_js.html' %}
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript">
         function nospaces(t){
             if(t.value.match(/\s/g)){
@@ -10,6 +9,8 @@
         }}
     </script>
 
+    {% include 'material/includes/material_css.html' %}
+    {% include 'material/includes/material_js.html' %}
 
     <body style="background-color: #f2f2f2;">
 
