cleaner API windows compatibility

--- a/cfgs/templates/cfgs/confSelect.html
+++ b/cfgs/templates/cfgs/confSelect.html
@@ -23,7 +23,7 @@ tr:hover {
 <div class="container">
     <div class="card">
         <h6 style="font-weight:bold">Create new config</h6>
-        <form action="/cfgs/create/" method="post">
+        <form action="/cfgs/create" method="post">
             {% csrf_token %}
             {% form form=form %}{% endform %}
             <input type="submit" value="Create" class="btn green">
@@ -41,7 +41,7 @@ tr:hover {
                 <td style="width: 200px">{{cfg}}</td>
                 <td><a href="/cfgs/{{cfg}}" class="btn blue">Edit</a></td>
                 <td>
-                    <form style="margin: 0" action="/cfgs/delete/" method="post">{% csrf_token %}
+                    <form style="margin: 0" action="/cfgs/delete" method="post">{% csrf_token %}
                         <input hidden name="cfg" value="{{cfg}}">
                         <input type="submit" value="Delete" class="btn red">
                     </form>
