--- a/templates/base_web.html
+++ b/templates/base_web.html
@@ -7,6 +7,23 @@
             alert('Spaces are not allowed');
             t.value=t.value.replace(/\s/g,'');
         }}
+
+        <!--https://stackoverflow.com/questions/6835835/jquery-simple-polling-example-->
+        function getCookie(c_name) {
+            if (document.cookie.length > 0) {
+                c_start = document.cookie.indexOf(c_name + "=");
+                if (c_start != -1) {
+                    c_start = c_start + c_name.length + 1;
+                    c_end = document.cookie.indexOf(";", c_start);
+                    if (c_end == -1) c_end = document.cookie.length;
+                    return unescape(document.cookie.substring(c_start,c_end));
+                }
+            } return "";}
+
+        $.ajaxSetup({
+            headers: { "X-CSRFToken": getCookie("csrftoken") }
+        });
+
     </script>
 
     {% include 'material/includes/material_css.html' %}
