--- a/templates/base.html
+++ b/templates/base.html
@@ -1,1 +1,42 @@
-base_web.html
+<html>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript">
+        function nospaces(t){
+            if(t.value.match(/\s/g)){
+            alert('Spaces are not allowed');
+            t.value=t.value.replace(/\s/g,'');
+        }}
+
+        <!--https://stackoverflow.com/questions/6835835/jquery-simple-polling-example-->
+        function getCookie(c_name) {
+            if (document.cookie.length > 0) {
+                c_start = document.cookie.indexOf(c_name + "=");
+                if (c_start != -1) {
+                    c_start = c_start + c_name.length + 1;
+                    c_end = document.cookie.indexOf(";", c_start);
+                    if (c_end == -1) c_end = document.cookie.length;
+                    return unescape(document.cookie.substring(c_start,c_end));
+                }
+            } return "";}
+
+        $.ajaxSetup({
+            headers: { "X-CSRFToken": getCookie("csrftoken") }
+        });
+
+    </script>
+
+{% include 'material/includes/material_css.html' %}
+{% include 'material/includes/material_js.html' %}
+
+<body style="background-color: #f2f2f2;">
+
+{% block base %}
+{% endblock %}
+
+
+<footer style="float: right; text-align: right; position: absolute; bottom: 0px; right: 10px;">
+    &copy; 2018 Matthias Gorzellik | v0.1 | <a href="https://github.com/gotzl/accservermanager">GitHub</a>
+</footer>
+</body>
+<html>
