--- a/templates/main_web.html
+++ b/templates/main_web.html
@@ -3,15 +3,17 @@
 
     {% if user.is_authenticated %}
     <header>
-        <nav style="background: #c21807;">
-            <a style="font-size:20px; font-weight: bold; padding: 14px 20px; color: black;" href="/instances">Instances</a>
-            <a style="font-size:20px; font-weight: bold; padding: 14px 20px; color: black;" href="/cfgs">Configs</a>
-            <a style="font-size:20px; font-weight: bold; padding: 14px 20px; color: black;" href="{% url 'logout' %}">Logout</a>
+        <nav>
+            <a href="/instances">Instances</a>
+            <a href="/cfgs">Configs</a>
+            <a href="{% url 'logout' %}">Logout</a>
         </nav>
     </header>
 
-    {% block content %}
-    {% endblock %}
+    <div id="content">
+        {% block content %}
+        {% endblock %}
+    </div>
 
     {% else %}
     <p>You are not logged in</p>
