--- a/instances/templates/instances/instance.html
+++ b/instances/templates/instances/instance.html
@@ -2,38 +2,13 @@
 {% block content %}
 
 <style>
-/* Style the buttons */
-button {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/* Add a background color to the submit button on mouse-over */
-button:hover {
-  background-color: #45a049;
-}
-
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 10px 16px 20px 16px;
-}
-
-/* Add some padding inside the card container */
 .container {
     padding: 20px 16px;
 }
 </style>
 
 <div class="container">
-    <div class="card">
+    <div class="card" style="padding: 10px 16px 20px 16px;">
         <h6 style="font-weight:bold">Latest stdout</h6>
         <textarea id="stdout" style="height: 200px;" disabled></textarea>
 
