--- a/instances/templates/instances/instances.html
+++ b/instances/templates/instances/instances.html
@@ -2,31 +2,6 @@
 {% block content %}
 
 <style>
-/* Style the buttons */
-button {
-  width: 100%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-/* Add a background color to the submit button on mouse-over */
-button:hover {
-  background-color: #45a049;
-}
-
-.card {
-    /* Add shadows to create the "card" effect */
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    padding: 2px 16px;
-}
-
-/* Add some padding inside the card container */
 .container {
     padding: 20px 16px;
 }
@@ -39,7 +14,7 @@ button:hover {
         <form name="instance_form" action="start" method="POST"
               onsubmit="return (document.forms['instance_form']['cfg'].value.length>0)">{% csrf_token %}
             {% form form=form %}{% endform %}
-            <button type="submit">Start</button>
+            <button class="btn green" type="submit">Start</button>
         </form>
     </div>
 </div>
