--- a/templates/base.html
+++ b/templates/base.html
@@ -24,16 +24,60 @@
             headers: { "X-CSRFToken": getCookie("csrftoken") }
         });
 
-    </script>
+</script>
+
 
 {% include 'material/includes/material_css.html' %}
 {% include 'material/includes/material_js.html' %}
 
-<body style="background-color: #f2f2f2;">
 
-{% block base %}
-{% endblock %}
+<style>
+    html, body {
+        width:100%;
+        height:100%;
+        margin:0;
+        background-color: #f2f2f2;
+    }
 
+    #wrapper {
+        width:100%;
+        height:100%;
+        position:relative;
+    }
+
+    header nav {
+        width:100%;
+        height:60px;
+        background: #c21807;
+    }
+
+    header nav a {
+        font-size:20px;
+        font-weight: bold;
+        padding: 14px 20px;
+        color: black;
+    }
+
+    #content {
+        position:absolute;
+        top:60px;
+        bottom:30px;
+        left:0;
+        width:100%;
+    }
+
+    .card {
+        padding: 2px 16px;
+    }
+</style>
+
+
+<body>
+
+<div id="wrapper">
+    {% block base %}
+    {% endblock %}
+</div>
 
 <footer style="float: right; text-align: right; position: absolute; bottom: 0px; right: 10px;">
     &copy; 2018 Matthias Gorzellik | v0.1 | <a href="https://github.com/gotzl/accservermanager">GitHub</a>
