--- a/cfgs/templates/cfgs/confEdit.html
+++ b/cfgs/templates/cfgs/confEdit.html
@@ -7,14 +7,21 @@
         position:relative;
     }
 
+    #cfg-inner-wrapper {
+        height:100%;
+        padding-top: 80px;
+    }
+
     #cfgs {
-        width:100%;
         height:80px;
+        margin-top:-80px;
     }
 
     #cfg {
-        margin-left:200px;
-        padding-left:30px;
+        height: 100%;
+        overflow: auto;
+        margin-left: 200px;
+        padding-left: 30px;
         border-left: 1px solid #9e9e9e;
     }
 
@@ -35,95 +42,98 @@
 
 <div id="cfg-wrapper" class="container">
     <div class="card" style="height:100%">
-        <header id="cfgs">
-            <form action="" method="post">{% csrf_token %}
-                {{ cfgs }}
-            </form>
-        </header>
+        <div id="cfg-inner-wrapper">
 
-        {% if cfg is not None %}
-        <sidenav>
-            {% for i,j in keys %}
-            <a style="font-size:16px; font-weight: bold; display:block;" href="/cfgs/{{cfg}}/{{i}}">{{ j }}</a>
-            {% endfor %}
-        </sidenav>
-
-        {% if form is not None %}
-        {% load material_form %}
-        <div id="cfg">
-            <!--<div>-->
-                <h6 style="font-weight:bold">{{request.path}}</h6>
-                <form action="" method="post">
-
-                    {% csrf_token %}
-                    {% form form=form %}{% endform %}
-                    <input type="submit" class="btn green" value="Save">
+            <header id="cfgs">
+                <form action="" method="post">{% csrf_token %}
+                    {{ cfgs }}
                 </form>
-            <!--</div>-->
-        </div>
-        {% endif%}
+            </header>
 
-        {% if forms is not None %}
-        {% load material_form %}
-        <div id="cfg">
-            {% for frm in forms %}
-            <div id="form{{forloop.counter0}}" class="card" style="display:none">
-                <h6 style="font-weight:bold">{{request.path}}/{{forloop.counter0}}</h6>
-                <form action="" method="post">
+            {% if cfg is not None %}
+            <sidenav>
+                {% for i,j in keys %}
+                <a style="font-size:16px; font-weight: bold; display:block;" href="/cfgs/{{cfg}}/{{i}}">{{ j }}</a>
+                {% endfor %}
+            </sidenav>
 
-                    {% csrf_token %}
-                    <!--{{ frm }}-->
-                    {% form form=frm %}{% endform %}
-                    <input type="submit" class="btn green" value="Save">
-                    <input type="hidden" name="_id" value="{{forloop.counter0}}">
-                </form>
+            {% if form is not None %}
+            {% load material_form %}
+            <div id="cfg">
+                <!--<div>-->
+                    <h6 style="font-weight:bold">{{request.path}}</h6>
+                    <form action="" method="post" style="padding-right:20px">
+
+                        {% csrf_token %}
+                        {% form form=form %}{% endform %}
+                        <input type="submit" class="btn green" value="Save">
+                    </form>
+                <!--</div>-->
             </div>
-            {% endfor %}
+            {% endif%}
 
-            <input id="prevbutton" type="button" value="Previous" class="btn blue" disabled/>
-            <input id="nextbutton" type="button" value="Next" class="btn blue" disabled/>
-            <input id="removebutton" type="button" class="btn red" value="Remove" disabled/>
-            <input id="addbutton" type="button" value="Add" class="btn green" disabled/>
+            {% if forms is not None %}
+            {% load material_form %}
+            <div id="cfg">
+                {% for frm in forms %}
+                <div id="form{{forloop.counter0}}" class="card" style="display:none">
+                    <h6 style="font-weight:bold">{{request.path}}/{{forloop.counter0}}</h6>
+                    <form action="" method="post" style="padding-right:20px">
 
-        </div>
+                        {% csrf_token %}
+                        <!--{{ frm }}-->
+                        {% form form=frm %}{% endform %}
+                        <input type="submit" class="btn green" value="Save">
+                        <input type="hidden" name="_id" value="{{forloop.counter0}}">
+                    </form>
+                </div>
+                {% endfor %}
 
-        <script>
-            var form_id = 0
+                <input id="prevbutton" type="button" value="Previous" class="btn blue" disabled/>
+                <input id="nextbutton" type="button" value="Next" class="btn blue" disabled/>
+                <input id="removebutton" type="button" class="btn red" value="Remove" disabled/>
+                <input id="addbutton" type="button" value="Add" class="btn green" disabled/>
 
-            function handleButtons(new_form_id) {
-                form_id = new_form_id
-                $("div[id^='form']").hide();
-                $("#form"+new_form_id).show();
+            </div>
 
-                if (new_form_id>0) $("#prevbutton").prop('disabled', false);
-                else $("#prevbutton").prop('disabled', true);
+            <script>
+                var form_id = 0
 
-                if ($('#form1').length) $("#removebutton").prop('disabled', false);
-                else $("#removebutton").prop('disabled', true);
+                function handleButtons(new_form_id) {
+                    form_id = new_form_id
+                    $("div[id^='form']").hide();
+                    $("#form"+new_form_id).show();
 
-                if ($('#form'+(new_form_id+1)).length) {
-                    $("#nextbutton").prop('disabled', false);
-                    $("#addbutton").prop('disabled', true);
-                } else {
-                    $("#nextbutton").prop('disabled', true);
-                    $("#addbutton").prop('disabled', false);
+                    if (new_form_id>0) $("#prevbutton").prop('disabled', false);
+                    else $("#prevbutton").prop('disabled', true);
+
+                    if ($('#form1').length) $("#removebutton").prop('disabled', false);
+                    else $("#removebutton").prop('disabled', true);
+
+                    if ($('#form'+(new_form_id+1)).length) {
+                        $("#nextbutton").prop('disabled', false);
+                        $("#addbutton").prop('disabled', true);
+                    } else {
+                        $("#nextbutton").prop('disabled', true);
+                        $("#addbutton").prop('disabled', false);
+                    }
                 }
-            }
 
-            $("#prevbutton").click(function (){handleButtons(form_id-1)})
-            $("#nextbutton").click(function (){handleButtons(form_id+1)})
-            $("#addbutton").click(function() {
-                window.location = '{{request.path}}'+'/add';
-            })
-            $("#removebutton").click(function() {
-                window.location = '{{request.path}}'+'/remove/'+form_id;
-            })
+                $("#prevbutton").click(function (){handleButtons(form_id-1)})
+                $("#nextbutton").click(function (){handleButtons(form_id+1)})
+                $("#addbutton").click(function() {
+                    window.location = '{{request.path}}'+'/add';
+                })
+                $("#removebutton").click(function() {
+                    window.location = '{{request.path}}'+'/remove/'+form_id;
+                })
 
-            handleButtons(form_id)
-        </script>
+                handleButtons(form_id)
+            </script>
 
-        {% endif %}
-        {% endif %}
+            {% endif %}
+            {% endif %}
+        </div>
     </div>
 </div>
 
