- very preliminary results app allowing to view the server results, (will) require django_tables2 (adjusted README and Dockerfile) - menu now 'Configs Instances Results'

--- a/templates/main_app.html
+++ b/templates/main_app.html
@@ -3,8 +3,9 @@
 
     <header>
         <nav style="background: #c21807;">
-            <a href="/instances">Instances</a>
             <a href="/cfgs">Configs</a>
+            <a href="/instances">Instances</a>
+            <a href="/results">Results</a>
         </nav>
     </header>
 
