--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,24 @@
     .card {
         padding: 2px 16px;
     }
+
+    .breadcrumb {
+        color: black;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+    }
+    .breadcrumb > li {
+        float:left;
+    }
+    .breadcrumb:last-child {
+        color: black;
+    }
+    .divider {
+        color: black;
+        background-color: white;
+    }
 </style>
 
 
